# hhvm

./: .gitmodules  CMakeLists.txt
CMake/: FindOCaml.cmake  HPHPCompiler.cmake  HPHPFunctions.cmake  HPHPSetup.cmake
hphp/: CMakeLists.txt
hphp/hack/src/: _tags
hphp/hhbbc/: options.h
hphp/hhvm/: CMakeLists.txt  process-init.cpp
hphp/neo/: neo_hash.c
hphp/ppc64-asm/: CMakeLists.txt  asm-ppc64.cpp  asm-ppc64.h  branch-ppc64.h  dasm-ppc64.cpp  dasm-ppc64.h  decoded-instr-ppc64.cpp  decoded-instr-ppc64.h  decoder-ppc64.cpp  decoder-ppc64.h  isa-ppc64.h
hphp/ppc64-asm/test/: test-asm-ppc64.cpp
hphp/runtime/base/: arch.h  hash-table-inl.h  memory-manager-inl.h  mixed-array-defs.h  program-functions.cpp  runtime-option.cpp  runtime-option.h  tv-helpers.cpp
hphp/runtime/server/: http-protocol.cpp
hphp/runtime/vm/: as.h  bytecode.cpp  bytecode.h  func-inl.h  func.h  native-func-caller.h  native.cpp  repo-global-data.h  unwind-vm-inl.h  unwind-vm.cpp  unwind-vm.h
hphp/test/: config.ini  run
hphp/test/quick/: exceptions_clone.php.ini
hphp/test/slow/: config.ini
hphp/test/zend/: config.ini
hphp/tools/: make_native-func-caller.php
hphp/tools/tc-print/: CMakeLists.txt  offline-ppc64-code.cpp  offline-x86-code.cpp  offline-x86-code.h
hphp/util/: asm-ppc64.cpp  asm-ppc64.h  asm-x64.cpp  asm-x64.h  bitops.h  compact-tagged-ptrs.h  decoded-instr-x64.cpp  decoded-instr-x64.h  decoded-instr.h  disasm.cpp  dwarf-reg.h  eh-frame.cpp  eh-frame.h  etch-helpers.h  immed.h  portability.h  strcmp-power8.S  strcmp-sse42.S  thread-local.cpp  thread-local.h  trace.h
(+219 files in other folders)
